[package]
name = "cargo-real-deps"
version = "0.1.0"
authors = [
    "Geoffroy Couprie <contact@geoffroycouprie.com>",
    "alpha-tango-kilo <git@heyatk.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/alpha-tango-kilo/cargo-real-deps"
keywords = ["cargo", "dependencies"]
categories = ["development-tools", "development-tools::cargo-plugins"]
description = "Cargo subcommand to check which crates are built depending on features"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For handling cargo's errors
anyhow = "1.0"
# For determining which dependencies are built
cargo = "0.59"
# For this crate's errors
thiserror = "1.0"

[profile.release]
lto = "thin"
panic = "abort"

[profile.turbo]
inherits = "release"
lto = "fat"
codegen-units = 1
